--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 .button-quiz {
     max-width: 10rem;
     padding: 1rem;
+    margin: .3rem;
 }
 .button-container{
     align-items: center;
@@ -28,12 +29,26 @@ button:hover{
     text-align: center;
     align-items: center;
     justify-content: center;
-    
 }
 .fondo{
     background-image: url("./fondo.jpg");
     width: 100%;
     height: 100vh;
+}
+
+.img-gameover{
+    width: 100%;
+    height: 100vh;
+}
+
+.marcador-final{
+    background-color: black;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    color:rgb(241, 240, 240);
+    font-size: 2rem;
+    font-weight: 600;
 }
 
 .pregunta{
